reparacion de imagenes en Users

--- a/src/app/modules/users/delete-users/delete-users.component.html
+++ b/src/app/modules/users/delete-users/delete-users.component.html
@@ -3,7 +3,7 @@
     <!--begin::Modal header-->
     <div class="modal-header" id="kt_modal_add_user_header">
         <!--begin::Modal title-->
-        <h2 class="fw-bolder"> Delete Rol: #{{ USER_SELECTED.name }}</h2>
+        <h2 class="fw-bolder"> Delete User: #{{ USER_SELECTED.name }}</h2>
 
         <!--end::Modal title-->
         <!--begin::Close-->
