--- a/src/app/modules/users/edit-users/edit-users.component.html
+++ b/src/app/modules/users/edit-users/edit-users.component.html
@@ -3,7 +3,7 @@
     <!--begin::Modal header-->
     <div class="modal-header" id="kt_modal_add_user_header">
         <!--begin::Modal title-->
-        <h2 class="fw-bolder">Registrar Usuario {{ USER_SELECTED.full_name }}  </h2>
+        <h2 class="fw-bolder">Editar Usuario {{ USER_SELECTED.full_name }}  </h2>
         <!--end::Modal title-->
         <!--begin::Close-->
         <div class="btn btn-icon btn-sm btn-active-icon-primary" data-kt-users-modal-action="close" (click)="modal.dismiss()">
