--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -110,7 +110,7 @@
           </a>
         </div>
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/apps/roles">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/configuraciones/unidades/lists">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
