--- a/src/app/modules/configuration/provider/delete-provider/delete-provider.component.html
+++ b/src/app/modules/configuration/provider/delete-provider/delete-provider.component.html
@@ -3,7 +3,7 @@
     <!--begin::Modal header-->
     <div class="modal-header" id="kt_modal_add_user_header">
         <!--begin::Modal title-->
-        <h2 class="fw-bolder"> Delete Metodo de Pago: #{{ PROVIDERS_SELECTED.name }}</h2>
+        <h2 class="fw-bolder"> Delete Proveedor: #{{ PROVIDERS_SELECTED.full_name }}</h2>
 
         <!--end::Modal title-->
         <!--begin::Close-->
