--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -229,13 +229,13 @@
         <span class="menu-icon">
           <app-keenicon name="parcel" class="fs-2"></app-keenicon>
         </span>
-        <span class="menu-title" data-link="/configuraciones/categorias-de-producto/list">Productos
+        <span class="menu-title" data-link="/productos">Productos
         </span>
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div class="menu-item" *ngIf="showMenu(['register_product'])" >
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/apps/users">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/productos/registro">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -245,7 +245,7 @@
           </a>
         </div>
         <div class="menu-item" *ngIf="showMenu(['list_product'])" >
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/configuraciones/categorias-de-producto/list">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/productos/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
