ajustes de descripciones

--- a/src/app/modules/products/list-product/list-product.component.html
+++ b/src/app/modules/products/list-product/list-product.component.html
@@ -54,7 +54,7 @@
                             <!--begin::Input group-->
                             <div class="mb-10">
                                 <!--begin::Label-->
-                                <label class="form-label fw-semibold">Member Type:</label>
+                                <label class="form-label fw-semibold">Tipo de Cliente:</label>
                                 <!--end::Label-->
                                 <!--begin::Options-->
                                 <div class="d-flex">
@@ -326,7 +326,7 @@
                                                 <label class="required form-label">Precio Base</label>
                                                 <!--end::Label-->
                                                 <!--begin::Input-->
-                                                <input type="number" name="price" class="form-control mb-2" placeholder="Product price" value="" />
+                                                <input type="number" name="price" class="form-control mb-2" placeholder="precio de producto" value="" />
                                                 <!--end::Input-->
                                                 <!--begin::Description-->
                                                 <div class="text-muted fs-7">Establece el precio del Producto.</div>
@@ -342,7 +342,7 @@
                                             </div>
                                             <div class="col-4">
                                                 <label class="required form-label">Tiempo de abastecimiento</label>
-                                                <input type="number" name="tiempo_de_abastecimiento" class="form-control mb-2" placeholder="Product price" value="" />
+                                                <input type="number" name="tiempo_de_abastecimiento" class="form-control mb-2" placeholder="precio del producto" value="" />
                                             </div>
                                         </div>
                                         <!--end::Input group-->
@@ -350,7 +350,7 @@
                                         <div class="fv-row mb-10">
                                             <!--begin::Label-->
                                             <label class="fs-6 fw-semibold mb-2">Tipo de Descuento
-                                            <span class="ms-1" data-bs-toggle="tooltip" title="Select a discount type that will be applied to this product">
+                                            <span class="ms-1" data-bs-toggle="tooltip" title="Selecciona el tipo de descuento que aplicara a este producto">
                                                 <i class="ki-duotone ki-information-5 text-gray-500 fs-6">
                                                     <span class="path1"></span>
                                                     <span class="path2"></span>
@@ -649,8 +649,12 @@
                                                 <!--end::Label-->
                                                 <!--begin::Select2-->
                                                 <select class="form-select mb-2" name="tax" placeholder="Select an option">
-                                                    <option value="1">LIMA</option>
-                                                    <option value="2">ANCASH</option>
+                                                    <option value="1">MONTERREY</option>
+                                                    <option value="2">GUADALUPE</option>
+                                                    <option value="2">SAN NICOLAS</option>
+                                                    <option value="2">APODACA</option>
+                                                    <option value="2">JUAREZ</option>
+                                                    <option value="2">GARCIA</option>
                                                 </select>
                                                 <!--end::Select2-->
                                                 <!--begin::Description-->
